Fix spacing of tags/custom metadata
This commit adds more space for tags/metadata so they don't get cut off
on the right side of the screen. This is done by reducing the padding on
tags, disabling the `table-layout: fixed` value, removing extra margins
added to metadata fields and values, and a few other style tweaks.

PER-9136: Clean up public archive metadata bar: stop tags spilling over
the edge

--- a/src/app/file-browser/components/file-viewer/file-viewer.component.scss
+++ b/src/app/file-browser/components/file-viewer/file-viewer.component.scss
@@ -220,11 +220,9 @@ iframe {
 
     td:first-child {
       font-weight: bold;
-      padding-right: 5px;
     }
 
     .metadata-table {
-      table-layout: fixed;
       width: calc($metadata-width - 20px);
     }
   }
@@ -247,7 +245,13 @@ iframe {
     vertical-align: top;
 
     &:first-child {
-      padding-right: 5px;
+      padding-right: 15px;
+      vertical-align: middle;
+
+      &.top-align {
+        vertical-align: top;
+        padding-top: 0.5rem;
+      }
     }
   }
 
